@@ -31,6 +31,7 @@ Many thanks to:
 	<li>David de Ugarte</li>
 	<li>Alejandro Garrido Mota </li>
 	<li>Gregoris Koutsoyiannis </li>
+	<li>Markos Chandras </li>
 </ul>
 </div>
 
